--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="zoz.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="zoz.css"/>
     <title>angurgapi</title>
   </head>
   <body>
@@ -15,7 +16,7 @@
   </section>
 
   <section id='projects' class='projects-section'>
-    <h2 class='projects-section-header'><span id='blink'><</span>projects<span id='blink'>/></span></h2>
+    <h2 class='section-header'><span id='blink'><</span>projects<span id='blink'>/></span></h2>
     <div class="projects-grid">
 
          <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/about-malbolge/">
@@ -42,6 +43,18 @@
       </a>
 
 </section>
+
+<section id="contacts" class="contact-section">
+<div class="contact-section-header">
+<h2 class='section-header'><span id='blink'><</span>contacts<span id='blink'>/></span></h2>
+</div>
+<div class="contact-links">
+<a href="https://telegram.me/azoopiranu"target="_blank" class="btn contact-details"></i>Telegram</a>
+<a href="https://github.com/angurgapi" target="_blank" class="btn contact-details"></i> GitHub</a>
+<a href="mailto:sophiekovalsky@gmail.com" class="btn contact-details">E-mail</a>
+</div>
+</section>
+
 </main>
 
 
