--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="zoz.css"/>
     <title>angurgapi</title>
   </head>
@@ -24,6 +23,15 @@
            <p class='project-title'>About Malbolge</p>
          </a>
 
+      <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/fake-twit-generator/">
+           <img class='project-image' src="images/twit.jpg" alt="">
+          <p class='project-title'>Fake twit generator</p>
+         </a>
+
+      <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/countdown/">
+           <img class='project-image' src="images/timer.jpg" alt="">
+           <p class='project-title'>Countdown</p>
+         </a>
 
       <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/hangman-game/">
         <img class='project-image' src="images/hangman.jpg" alt="">
