tg link updated

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="zoz.css"/>
+    <script defer src='scrpt.js'></script>
     <title>angurgapi</title>
   </head>
   <body>
@@ -57,7 +58,7 @@
 <h2 class='section-header'><span id='blink'><</span>contacts<span id='blink'>/></span></h2>
 </div>
 <div class="contact-links">
-<a href="https://telegram.me/azoopiranu"target="_blank" class="btn contact-details"></i>Telegram</a>
+<a href="https://telegram.me/angurgapi"target="_blank" class="btn contact-details"></i>Telegram</a>
 <a href="https://github.com/angurgapi" target="_blank" class="btn contact-details"></i> GitHub</a>
 <a href="mailto:sophiekovalsky@gmail.com" class="btn contact-details">E-mail</a>
 </div>
