changed link to twit-gen

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
            <p class='project-title'>About Malbolge</p>
          </a>
 
-      <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/fake-twit-generator/">
+      <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/fake-twit-gen/">
            <img class='project-image' src="images/twit.jpg" alt="">
           <p class='project-title'>Fake twit generator</p>
          </a>
