--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       </a>
 
 
-      <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/planetarium-page/">
-        <img class='project-image' src="images/planetarium.jpg" alt="">
-        <p class='project-title'>Brno Planetarium</p>
+      <a class="project project-tile" target="_blank" href="https://mika-nails.ru">
+        <img class='project-image' src="images/m1.jpg" alt="">
+        <p class='project-title'>Nail Designer's page</p>
       </a>
 
 
