--- a/index.html
+++ b/index.html
@@ -21,31 +21,29 @@
       <h2 class='section-header'><span id='blink'><</span>projects<span id='blink'>/></span></h2>
       <div class="projects-grid">
 
-         <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/about-malbolge/">
-           <img class='project-image' src="images/malbolge.jpg" alt="">
-           <p class='project-title'>About Malbolge</p>
-         </a>
 
-      <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/fake-twit-gen/">
-           <img class='project-image' src="images/twit.jpg" alt="">
-          <p class='project-title'>Fake twit generator</p>
-         </a>
 
       <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/ztm/">
            <img class='project-image' src="images/ztm.jpg" alt="">
            <p class='project-title'>ZTM bureau</p>
          </a>
 
-      <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/hangman-game/">
-        <img class='project-image' src="images/hangman.jpg" alt="">
-        <p class='project-title'>Hangman game</p>
-      </a>
-
-
       <a class="project project-tile" target="_blank" href="https://mika-nails.ru">
-        <img class='project-image' src="images/m1.jpg" alt="">
+        <img class='project-image' src="images/mika.jpg" alt="">
         <p class='project-title'>Nail Designer's page</p>
       </a>
+
+      <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/fake-twit-gen/">
+         <img class='project-image' src="images/twit.jpg" alt="">
+          <p class='project-title'>Fake twit generator</p>
+         </a>
+
+
+      <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/about-malbolge/">
+        <img class='project-image' src="images/malbolge.jpg" alt="">
+        <p class='project-title'>About Malbolge</p>
+      </a>
+
 
 
       <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/meditation-timer/">
