med-timer tile off

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <main class='main'>
 
   <section id='welcome-section' class='welcome-section'>
-  <h1>Let me take care about your pages</h1>
+  <h1>Hey! Angurgapi here, a web-developer</h1>
+  <h2>Let me take care about your pages</h2>
   </section>
 
   <section class="main-section">
@@ -44,12 +45,6 @@
         <p class='project-title'>About Malbolge</p>
       </a>
 
-
-
-      <a class="project project-tile" target="_blank" href="https://angurgapi.github.io/meditation-timer/">
-        <img class='project-image' src="images/meditation.jpg" alt="">
-        <p class='project-title'>Meditation timer</p>
-      </a>
 
     </div>
 <div class='top-border'></div>
